优化登录方式，优化“更多”界面。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="app_version">beta 3.2.2</string>
     <string name="developer_name">Febers</string>
     <string name="developer_email">febers418@qq.com</string>
-    <string name="app_web">http://app.febers.tech</string>
+    <string name="app_web">https://github.com/Febers/iUESTC</string>
     <string name="developer_github">https://github.com/Febers</string>
     <string name="home_course_table">课表</string>
     <string name="home_library">图书馆</string>
